Bug 631751 - Sniff Basic Latin BOMless UTF-16 for IE compat. r=bzbarsky, a=bzbarsky.